--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "google-home-notifier": "^1.2.0",
     "http": "0.0.0",
+    "http-errors": "^1.7.1",
     "mysql": "^2.16.0",
     "redis": "^2.8.0"
   },
